# Japan_Subway

./: .gitignore  AGENTS.md  AGENT_HANDOFF.md  CLAUDE.md  GEMINI.md  README.md  eslint.config.mjs  omo  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: backend-ci.yml  web-mobile-ci.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: config.py  deps.py  main.py  schemas.py  store.py
apps/api/app/routers/: auth.py  health.py  rankings.py  runs.py
apps/api/app/services/: anti_cheat.py
apps/api/tests/: conftest.py  test_anti_cheat.py  test_auth.py  test_health.py  test_rankings.py  test_runs.py
apps/mobile/: README.md  package.json
apps/web/: index.html  package.json
apps/web/src/: App.tsx
apps/web/src/components/: MapView.tsx  ScoreBoard.tsx  TypingInput.tsx
data/: package.json  tsconfig.json
data/parsed/: ginza-line.json
data/scripts/: cli.ts  generate-names.test.ts  generate-names.ts  name-overrides.ts  node-shims.d.ts  parsed-files.ts  validate-golden.test.ts
doc/: api-spec.md  backend-spec.md  kickoff-prompt.md  일본_지하철역_타자게임_개발계획서_개정판.docx
doc/md/: README.md  devops-deployment.md  mobile-spec.md  translation-engine-spec.md
